--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Microsoft Learn Language Selector",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Change your preferred language in microsoft learn easily",
   "homepage_url": "https://github.com/almirjnr/learn-microsoft-language-browser-extension",
   "icons": {
@@ -10,20 +10,23 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "almirafjr@github.com"
+      "id": "almirjnr@github.com"
     }
   },
-  "content_scripts": [
-    {
-      "matches": [
-        "*://learn.microsoft.com/*"
-      ],
-      "js": [
-        "redirect.js"
-      ]
-    }
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": true,
+    "type": "module"
+  },
+  "permissions": [
+    "contextMenus",
+    "activeTab",
+    "tabs"
   ],
-  "host_permissions": [
-    "*://learn.microsoft.com/*"
-  ]
+  "browser_action": {
+    "default_icon": "icon.svg",
+    "default_popup": "popup.html"
+  }
 }
