--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,8 @@
   "browser_action": {
     "default_icon": "icon.svg",
     "default_popup": "popup.html"
-  }
+  },
+  "web_accessible_resources": [
+    "./shared.mjs"
+  ]
 }
