--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
-  "name": "Microsoft Learn Language Selector",
-  "version": "0.5",
-  "description": "Change your preferred language in microsoft learn easily",
+  "name": "Language Selector",
+  "version": "0.6",
+  "description": "Change your preferred language in supported websites easily",
   "homepage_url": "https://github.com/almirjnr/language-browser-extension",
   "icons": {
-    "48": "src/icons/icon.svg",
-    "96": "src/icons/icon.svg"
+    "48": "src/icons/icon.png",
+    "96": "src/icons/icon.png"
   },
   "browser_specific_settings": {
     "gecko": {
@@ -23,14 +23,16 @@
   "permissions": [
     "contextMenus",
     "activeTab",
-    "tabs"
+    "tabs",
+    "webRequest",
+    "declarativeNetRequest",
+    "storage"
   ],
   "browser_action": {
-    "default_icon": "src/icons/icon.svg",
+    "default_icon": "src/icons/icon.png",
     "default_popup": "src/popup/popup.html"
   },
   "web_accessible_resources": [
-    "src/libs/urlHelper.mjs",
-    "src/icons/icon.svg"
+    "src/icons/icon.png"
   ]
 }
